Mon Dec 10 16:21:38 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtkrbtree.c (_fixup_parity): New function to fixup parity.
	RBTree corruption bug--

2001-12-10  Anders Carlsson  <andersca@gnu.org>

	* gtk/gtktreeview.c (gtk_tree_view_remove_widget): Return
	if edited_column is NULL, also grab focus before removing
	the cell_editable.

Sun Dec 09 15:06:51 2001  George Lebl <jirka@5z.com>

	* gtk/gtkrange.c (gtk_range_calc_layout): check for 0 value on the
	  denominator in the horizontal case just like we do in the vertical
	  case (why I didn't notice that there were two cases the first time
	  around is beyond me:).  Also fix indentation in the vertical case.

2001-12-09  Anders Carlsson  <andersca@gnu.org>

	* gdk/x11/gdkevents-x11.c: Update xsettings name.

	* gtk/gtkdnd.c (gtk_drag_check_threshold): Use the
	gtk-dnd-drag-threshold GtkSetting.

	* gtk/gtksettings.c (gtk_settings_class_init): Add 
	setting for dnd drag threshold.

2001-12-09  Matthias Clasen  <matthiasc@poet.de>

	* gtk/gtkcontainer.c: Add docs.

2001-12-08  Matthias Clasen  <matthiasc@poet.de>

	* gtk/gtkwidget.c: Doc markup fix. 

	* gtk/gtktreeviewcolumn.c: Markup fixes. (#66447)

	* gtk/gtktreestore.c: Typo fixes. (#66445)

	* gtk/gtkaccelgroup.c: Misc doc markup. (#66425) 

	* gtk/gtkclipboard.c (gtk_clipboard_get_owner): Fix reference
	to gtk_clipboard_set_with_owner(). (#66424)
 
Sat Dec  8 16:12:10 2001  Christopher Blizzard  <blizzard@redhat.com>

	* gdk/gdk.c (gdk_init_check): Fallback to setting the prgname to
	"<unknown>" if someone doesn't pass in a valid argc.  (Patch from
	Fabrice Bellet <fabrice@gnu.org>, #54127).

Sat Dec  8 10:04:54 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtkrbtree.c (_gtk_rbtree_debug_spew): Add debug spew to lots
	of places, so that people with crashy trees can just run their
	program with GTK_DEBUG=TREE.

Sat Dec  8 20:57:24 2001  Kristian Rietveld  <kristian@planet.nl>

	* gtk/gtkliststore.c (gtk_list_store_remove): nuke the stamp++,